feat: implement ultra-high-performance composer.lock management system
Add libretto-lockfile crate with:
- Composer-compatible lock file structure (packages, packages-dev, aliases, etc.)
- sonic-rs for high-performance JSON serialization (<130µs for 500 packages)
- Atomic file operations with fs2 locking (exclusive/shared)
- SIMD-accelerated BLAKE3 hashing for integrity verification
- MD5 content-hash computation matching Composer's algorithm
- Lock file validation, drift detection, manual edit detection
- Migration support for old lock file schema versions
- Deterministic JSON output (sorted keys, consistent formatting)
- Comprehensive benchmarks validating <10ms performance target

Also includes updates to:
- libretto-autoloader: new parser and scanner modules
- libretto-cache: tiered caching with L1/L2, bloom filters, compression
- libretto-downloader: parallel downloads, streaming, VCS support

Performance benchmarks:
- Serialization (500 pkgs): ~130µs
- Parsing (500 pkgs): ~398µs
- Content hash: ~15µs

--- a/crates/libretto-autoloader/Cargo.toml
+++ b/crates/libretto-autoloader/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "libretto-autoloader"
-description = "PHP autoloader generation for Libretto"
+description = "Ultra-fast PHP autoloader generation for Libretto"
 version.workspace = true
 edition.workspace = true
 rust-version.workspace = true
@@ -12,8 +12,49 @@ authors.workspace = true
 workspace = true
 
 [dependencies]
+# Internal crates
 libretto-core = { workspace = true }
+
+# Serialization
 serde = { workspace = true }
+sonic-rs = { workspace = true }
+
+# Zero-copy serialization for caching
+rkyv = { workspace = true }
+
+# Logging
 tracing = { workspace = true }
+
+# Filesystem
 walkdir = { workspace = true }
+memmap2 = { workspace = true }
+
+# Parallelism
+rayon = { workspace = true }
+
+# PHP parsing
+tree-sitter = { workspace = true }
+tree-sitter-php = { workspace = true }
+streaming-iterator = "0.1"
+
+# Fast hashing
+blake3 = { workspace = true }
+ahash = { workspace = true }
+
+# Fast byte searching
+memchr = { workspace = true }
+
+# Regex for fallback parsing
 regex = { workspace = true }
+
+# Concurrent data structures
+dashmap = { workspace = true }
+parking_lot = { workspace = true }
+
+[dev-dependencies]
+tempfile = { workspace = true }
+criterion = { workspace = true }
+
+[[bench]]
+name = "autoloader_bench"
+harness = false
