--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ members = [
     "crates/libretto-autoloader",
     "crates/libretto-plugin-system",
     "crates/libretto-audit",
+    "crates/libretto-lockfile",
     "crates/libretto-cli",
 ]
 
@@ -38,6 +39,7 @@ libretto-vcs = { path = "crates/libretto-vcs" }
 libretto-autoloader = { path = "crates/libretto-autoloader" }
 libretto-plugin-system = { path = "crates/libretto-plugin-system" }
 libretto-audit = { path = "crates/libretto-audit" }
+libretto-lockfile = { path = "crates/libretto-lockfile" }
 
 # Async runtime
 tokio = { version = "1.35", features = ["full", "parking_lot"] }
@@ -51,6 +53,10 @@ rayon = "1.8"
 # Concurrent data structures
 dashmap = "5.5"
 parking_lot = "0.12"
+moka = { version = "0.12", features = ["sync", "future"] }
+
+# Zero-copy serialization
+rkyv = { version = "0.8", default-features = true }
 
 # Fast hashing
 ahash = "0.8"
@@ -70,9 +76,51 @@ reqwest = { version = "0.12", default-features = false, features = [
     "gzip",
     "brotli",
     "deflate",
+    "zstd",
     "json",
     "stream",
+    "http2",
+    "socks",
 ] }
+
+# HTTP types
+http = "1.1"
+hyper = { version = "1.4", features = ["http1", "http2", "client"] }
+hyper-util = { version = "0.1", features = ["tokio", "http2"] }
+
+# Async streams and compression
+tokio-util = { version = "0.7", features = ["io", "codec"] }
+futures-util = "0.3"
+async-stream = "0.3"
+async-compression = { version = "0.4", features = [
+    "tokio",
+    "gzip",
+    "deflate",
+    "brotli",
+    "zstd",
+    "xz",
+    "bzip2",
+] }
+async_zip = { version = "0.0.17", features = ["tokio", "deflate", "bzip2", "zstd", "lzma"] }
+tokio-tar = "0.3"
+
+# Additional hashing
+sha2 = "0.10"
+sha1 = "0.10"
+digest = "0.10"
+
+# Memory mapping
+memmap2 = "0.9"
+
+# Rate limiting / throttling
+governor = "0.6"
+nonzero_ext = "0.3"
+
+# Backoff / retry
+backon = "1.2"
+
+# Pin utilities
+pin-project-lite = "0.2"
 
 # Graph algorithms
 petgraph = "0.6"
@@ -127,6 +175,13 @@ once_cell = "1.19"
 
 # Regex
 regex = "1.10"
+
+# Fast byte searching
+memchr = "2.7"
+
+# PHP parsing
+tree-sitter = "0.24"
+tree-sitter-php = "0.23"
 
 # Testing
 criterion = { version = "0.5", features = ["html_reports"] }
