feat: add full Composer binary dependency parity
VCS Support:
- Add Perforce (p4) VCS support with CLI wrapper
- Update VcsType enum, error types, and manager to handle Perforce
- Add p4:// and //depot URL detection

Archive Support:
- Add native TAR.BZ2 extraction via bzip2 crate
- Add native TAR.XZ extraction via xz2 crate
- Add 7-Zip (.7z) extraction via CLI (7z/7zz/7za)
- Add RAR (.rar) extraction via CLI (unrar)
- Add helper functions for tool availability detection

Diagnose Command:
- Add VCS tool checks (git, svn, hg, fossil, p4)
- Add archive tool checks (native formats, 7z, unrar)
- Organize output into logical sections

This brings Libretto to full parity with Composer's supported
binary dependencies for both VCS and archive formats.

--- a/crates/libretto-archive/Cargo.toml
+++ b/crates/libretto-archive/Cargo.toml
@@ -22,3 +22,5 @@ flate2 = { workspace = true }
 tracing = { workspace = true }
 tempfile = { workspace = true }
 walkdir = { workspace = true }
+xz2 = "0.1"
+bzip2 = "0.4"
