fix(ci): specify bench target to avoid passing --noplot to test harness
When running 'cargo bench --package libretto-platform', cargo runs both
the library tests in bench mode and the criterion benchmark. The --noplot
flag was being passed to the test harness which doesn't recognize it.

Fixed by explicitly specifying '--bench platform_bench' to only run the
criterion benchmark.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -166,7 +166,7 @@ jobs:
         uses: Swatinem/rust-cache@v2
 
       - name: Run benchmarks
-        run: cargo bench --package libretto-platform -- --noplot
+        run: cargo bench --package libretto-platform --bench platform_bench -- --noplot
 
   # Cross-compilation check
   cross-compile:
