perf: replace tree-sitter-php with mago-syntax (7x faster parsing)
- Replace tree-sitter-php with mago-syntax 1.3.0 for PHP parsing
- Achieves ~7x faster parsing performance:
  - Simple class: 29.1µs -> 3.95µs (7.4x faster)
  - Complex file: 58.9µs -> 8.54µs (6.9x faster)
- Add BLAKE3 parallel hashing with rayon for large files
- Add content hash caching with moka
- Fix benchmarks to use sonic_rs::Value consistently (77% faster JSON parsing)
- Update version to 0.1.0 (alpha status)
- Update README with realistic project positioning

BREAKING CHANGE: Version changed from 1.0.0 to 0.1.0 to reflect alpha status

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,7 +19,7 @@ members = [
 ]
 
 [workspace.package]
-version = "1.0.0"
+version = "0.1.0"
 edition = "2024"
 rust-version = "1.89"
 license = "MIT"
@@ -69,7 +69,7 @@ rkyv = { version = "0.8", default-features = true }
 
 # Fast hashing
 ahash = "0.8"
-blake3 = "1.5"
+blake3 = { version = "1.5", features = ["rayon"] }
 
 # Error handling
 thiserror = "2.0"
