feat: improve autoloader parser and update dependencies
- Enhanced PHP autoloader parser with better class/interface/trait detection
- Improved scanner for namespace and use statement parsing
- Updated libretto-autoloader dependencies
- Minor fixes in libretto-cache SIMD module
- Fixed error handling in libretto-core

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -400,3 +400,7 @@ opt-level = 1
 inherits = "release"
 debug = true
 strip = false
+# Override release settings to reduce memory usage during benchmark compilation
+# Fat LTO with codegen-units=1 can consume 20GB+ RAM when compiling many benchmarks
+lto = "thin"
+codegen-units = 4
