--- a/crates/libretto-cache/Cargo.toml
+++ b/crates/libretto-cache/Cargo.toml
@@ -64,6 +64,7 @@ memchr = { workspace = true }
 
 [dev-dependencies]
 criterion = { workspace = true }
+rand = "0.8"
 
 [[bench]]
 name = "cache_bench"
