--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ members = [
     "crates/libretto-lockfile",
     "crates/libretto-cli",
     "crates/libretto-bench",
+    "crates/libretto-test-utils",
 ]
 
 [workspace.package]
@@ -232,8 +233,45 @@ memchr = "2.7"
 tree-sitter = "0.24"
 tree-sitter-php = "0.23"
 
-# Testing
+# Testing - Core frameworks
 criterion = { version = "0.5", features = ["html_reports"] }
+proptest = "1.4"
+test-case = "3.3"
+rstest = "0.18"
+rand = "0.8"
+
+# Testing - Snapshot testing
+insta = { version = "1.34", features = ["json", "yaml", "redactions"] }
+
+# Testing - Mocking
+mockall = "0.12"
+wiremock = "0.6"
+mockito = "1.2"
+
+# Testing - Assertions
+pretty_assertions = "1.4"
+assert_matches = "1.5"
+assert_cmd = "2.0"
+predicates = "3.0"
+
+# Testing - Async
+tokio-test = "0.4"
+async-trait = "0.1"
+
+# Testing - Fake data generation
+fake = { version = "2.9", features = ["derive", "chrono", "uuid"] }
+quickcheck = "1.0"
+quickcheck_macros = "1.0"
+arbitrary = { version = "1.3", features = ["derive"] }
+
+# Testing - File system
+assert_fs = "1.1"
+
+# Testing - HTTP testing
+httpmock = "0.7"
+
+# Testing - Fuzzing (dev dependencies)
+afl = "0.15"
 
 [workspace.lints.rust]
 unsafe_code = "deny"
