perf: conditional HTTP requests, bulk audit, fix false-positive CVEs
Metadata fetcher:
- Add If-Modified-Since + ETag conditional requests (like Composer)
- Skip network entirely for cache < 5 min old
- Graceful fallback to stale cache on network errors
- Result: 0.87s stale cache vs 7.8s before (9x faster)

Security audit:
- Single bulk POST to Packagist advisories API (like Composer)
- Was: 111 individual GET requests per package
- Now: 1 HTTP round trip for all packages

Audit accuracy:
- Use ComposerConstraint parser instead of semver::VersionReq
- Fixes false positives (59 -> 1 real advisory)
- affects_version() returns false on unparseable constraints
- Remove duplicate WARN log lines
- Compact audit summary in update output

Resolver:
- Two-pass PubGrub resolution for Composer replace semantics
- self.version constraint handling in replace/provide declarations

Update output:
- Categorized lock operations (install/upgrade/downgrade/remove)
- Funding summary
- Concise audit summary with severity breakdown

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -159,6 +159,12 @@ zip = { version = "2.0", default-features = false, features = [
 ] }
 tar = "0.4"
 flate2 = "1.0"
+xz2 = "0.1"
+bzip2 = "0.4"
+zstd = "0.13"
+
+# CPU detection
+num_cpus = "1.16"
 
 # Git operations
 gix = { version = "0.78", default-features = false, features = [
