cli/install: add security audit + install markers + post-install notes
- add run_security_audit flow in install command

- add lockfile-driven post-install package notes

- add install marker helpers to detect/skip already-installed packages

- expand install_packages logic for marker writes and improved package handling

- update download_and_extract_with_credential rate-limit default to unwrap_or_else

- update generate_autoloader handling in install flow

- apply targeted Clippy fixes across repository/plugin-system/bench/config/test-utils/cli

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -348,6 +348,12 @@ unused_self = "allow"
 # Continue can be explicit for clarity
 needless_continue = "allow"
 
+# Wildcard imports in internal modules are fine
+wildcard_imports = "allow"
+
+# Const fn detection - allow non-const for flexibility
+missing_const_for_fn = "allow"
+
 # Map/unwrap patterns are often clearer than alternatives
 map_unwrap_or = "allow"
 
