--- a/crates/libretto-platform/Cargo.toml
+++ b/crates/libretto-platform/Cargo.toml
@@ -46,8 +46,7 @@ cfg-if = "1.0"
 tokio = { workspace = true, optional = true }
 tokio-util = { workspace = true, optional = true }
 
-# io_uring (Linux only)
-tokio-uring = { version = "0.5", optional = true }
+# io_uring - moved to target-specific dependency below
 
 # TLS
 rustls = { version = "0.23", default-features = false, features = ["std", "tls12", "ring"], optional = true }
@@ -62,6 +61,9 @@ tokio-native-tls = { version = "0.3", optional = true }
 [target.'cfg(unix)'.dependencies]
 libc = "0.2"
 nix = { version = "0.29", features = ["fs", "signal", "process", "user"] }
+
+[target.'cfg(target_os = "linux")'.dependencies]
+tokio-uring = { version = "0.5", optional = true }
 
 [target.'cfg(windows)'.dependencies]
 windows-sys = { version = "0.59", features = [
